--- a/macondo/macondo_config.yaml
+++ b/macondo/macondo_config.yaml
@@ -1,4 +1,4 @@
-data-path: G:\macondo\data
+data-path: H:\macondo\data
 default-letter-distribution: english
 default-lexicon: CSW21
 ttable-mem-fraction: 0.25
