--- a/windows/.glzr/glazewm/config.yaml
+++ b/windows/.glzr/glazewm/config.yaml
@@ -60,7 +60,7 @@ window_effects:
     # ** Exclusive to Windows 11 due to API limitations.
     border:
       enabled: true
-      color: '#313244'
+      color: '#181825'
 
     # Remove the title bar from the window's frame. Note that this can
     # cause rendering issues for some applications.
@@ -72,13 +72,13 @@ window_effects:
     corner_style:
       enabled: true
       # Allowed values: 'square', 'rounded', 'small_rounded'.
-      style: 'small_rounded'
+      style: 'rounded'
 
   # Visual effects to apply to non-focused windows.
   other_windows:
     border:
-      enabled: false
-      color: '#a1a1a1'
+      enabled: true
+      color: '#45475a'
     hide_title_bar:
       enabled: false
     corner_style:
